...
                                <string key="text">Welcome to Liber, the app that will help you organise your books!

Now that you have made an account, you can view your digital bookcase. It may look empty for now, but head to the 'Add' section to start scanning!</string>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="0.0" y="44" width="375" height="96"/>
                                <items>
                                    <navigationItem title="Bookcase" id="kBv-Ti-DuK">
                                        <rightBarButtonItems>
                                            <barButtonItem systemItem="add" id="jVG-6f-uGi">
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Delete Book">
                                    <color key="titleColor" red="0.1524967888" green="0.4190410376" blue="0.14067776900000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Confirm" id="vjE-vN-Rc0">
                                            <connections>
                                                <action selector="confirmButtonPressed:" destination="UW0-79-uLl" id="CFB-TZ-FS2"/>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <items>
                                    <navigationItem title="Manual Add" id="xLR-3b-gqs">
                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="trR-Nu-78C">
                                            <connections>
...
        <scene sceneID="r4G-is-h4W">
            <objects>
                <viewController title="Account" id="s5T-N4-816" customClass="AccountViewController" customModule="Liber" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="zw1-r7-3xm">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
...
                                <items>
                                    <navigationItem title="Account" id="xVc-MZ-acz">
                                        <barButtonItem key="rightBarButtonItem" title="Logout" id="Yft-Df-iNC">
                                            <connections>
                                                <action selector="logoutPressed:" destination="s5T-N4-816" id="OyZ-cR-3iW"/>
...
                                <rect key="frame" x="104" y="224" width="166" height="33"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="View Organisations"/>
                                <connections>
                                    <action selector="viewOrgsButtonPressed:" destination="s5T-N4-816" eventType="touchUpInside" id="bfC-6m-f0C"/>
...
                                        <rect key="frame" x="0.0" y="52" width="375" height="44"/>
                                        <items>
                                            <navigationItem title="Organisations" id="5NW-LK-OMh">
                                                <barButtonItem key="leftBarButtonItem" systemItem="save" id="So9-jp-8vq">
                                                    <connections>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" red="1" green="0.99997437" blue="0.99999129769999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <rect key="frame" x="174" y="441" width="45" height="33"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="0.75294119119644165" green="0.22352941334247589" blue="0.16862745583057404" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pKk-p6-OFU">
                                <rect key="frame" x="16" y="307" width="343" height="30"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KDJ-ke-ToF">
                                <rect key="frame" x="16" y="269" width="343" height="30"/>
                                <constraints>
...
