...
  // Linking UI Elements
  @IBOutlet var searchBar: UISearchBar!
  @IBOutlet var tableView: UITableView!
  
  override func viewDidLoad() {
    super.viewDidLoad()
    view.accessibilityIdentifier = "bookcaseView" // Idenfitifier required to UI testing.
    
    searchBar.delegate = self
    
    // Load user's bookcase data.
    indeterminateLoad(displayText: "Loading bookcase", view: self.view)
    
...
      }
    }
  }
  
  @IBAction func addButtonPressed(_ sender: Any) {
    // Present action controller asking user method of book entry.
    let optionMenu = UIAlertController(title: "Book Entry", message: "How would you like to add your book?", preferredStyle: UIAlertController.Style.actionSheet)
    
    // Creation options.
    let manualEntryAction = UIAlertAction(title: "Manual Entry", style: UIAlertAction.Style.default) { (alert) in
      self.performSegue(withIdentifier: "goToManualEntry", sender: self)
    }
    
    let barcodeScanAction = UIAlertAction(title: "Barcode Scan", style: UIAlertAction.Style.default) { (alert) in
      self.performSegue(withIdentifier: "goToBarcodeEntry", sender: self)
    }
...
