...
    }
  }
  
  // MARK: - Book Deletion Handling
  @IBAction func deleteBookPressed(_ sender: Any) {
    // Open an action sheet to confirm the deletion of the book entry.
    let deleteMenu = UIAlertController(title: "Warning", message: "Deleting your account is a destructive action, this book entry will be deleted.", preferredStyle: UIAlertController.Style.actionSheet)
    
    // Options
    let cancelAction = UIAlertAction(title: "Cancel", style: UIAlertAction.Style.cancel)
    
    let confirmAction = UIAlertAction(title: "Confirm", style: UIAlertAction.Style.destructive) { (alert) in
      indeterminateLoad(displayText: "Deleting book", view: self.view)
...
